JSC/CSSOM: root(CSSElementStyleDeclaration) should never need to follow the element. <http://webkit.org/b/73561>

Reviewed by Antti Koivisto.

A CSSElementStyleDeclaration should always either have a null element pointer,
or return a valid parentStyleSheet(), since having an element pointer implies
having an associated element sheet.

In light of this, replace the opaque-root-from-element path for style declarations
by an assertion.

* bindings/js/JSDOMBinding.h:
(WebCore::root):


Canonical link: https://commits.webkit.org/90158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101687 268f45cc-cd09-0410-ab3c-d52691b4dbfc